# Entropy

./: .gitignore  .gitmodules  CMakeLists.txt  Entropy.sln
BgfxRenderer/: CMakeLists.txt
BgfxRenderer/Include/: BgfxGeometry.hpp  BgfxRenderer.h  BgfxRenderer.hpp  bgfx_utils.h
BgfxRenderer/Src/: BgfxRenderer.cpp  bgfx_utils.cpp
Direct3DRenderer/: CMakeLists.txt  Direct3DRenderer.vcxproj  Direct3DRenderer.vcxproj.filters
Direct3DRenderer/Include/: D3DUtil.hpp  D3d11Renderer.hpp  Direct3DRenderer.hpp
Direct3DRenderer/Private/: Application.cpp  Application.h  Color.cpp  Color.h  Core.h  D3DApplication.cpp  D3DUtil.h  DataChunkWrite.cpp  DataChunkWrite.h  Direct3DRenderer.cpp  GameTimer.cpp  GameTimer.h  Prerequest.h  Singleton.h  Vector4.cpp  Vector4.h  direct3drenderer_global.h
Direct3DRenderer/Public/: D3DApplication.h  Direct3DRenderer.h
Direct3DRenderer/Shaders/: fragment.bat  vertex.bat  vs_test.hlsl
Direct3DRenderer/Src/: D3d11Renderer.cpp  DXTrace.cpp  Direct3DRenderer.cpp
Editor/: CMakeLists.txt  Editor.pri  Editor.pro  Editor.rc  Editor.vcxproj  Editor.vcxproj.filters  EntropyHierarchyWidget.cpp  EntropyHierarchyWidget.h  EntropyMainWindow.cpp  EntropyMainWindow.h  EntropyMainWindow.qrc  EntropyMainWindow.ui  RenderWidget.cpp  RenderWidget.h  entropyopenglwidget.cpp  main.cpp
Editor/GUI/: EntropyMainWindow.ui
Editor/Private/: EntropyDirect3DWidget.cpp  EntropyDirect3DWidget.h  EntropyMainWindow.cpp  EntropyMainWindow.h  EntropyOpenGLWidget.cpp  EntropyOpenGLWidget.h  EntropyRenderWidget.cpp  EntropyRenderWidget.h  RenderWidget.cpp  RenderWidget.h
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/EntropyEngine/: CMakeLists.txt
Engine/EntropyEngine/Include/Common/: Allocator.hpp  Buffer.hpp  Camera.hpp  EntropyCore.hpp  Object.hpp  Transform.hpp
Engine/EntropyEngine/Include/Core/: EntropyCore.hpp
Engine/EntropyEngine/Include/Geometry/: Sphere.hpp
Engine/EntropyEngine/Include/Graphic/: Image.hpp  Material.hpp  SkyBox.hpp  Texture.hpp  Vertex.hpp
Engine/EntropyEngine/Include/Input/: Input.hpp
Engine/EntropyEngine/Include/Interface/: IRuntimeModule.hpp
Engine/EntropyEngine/Include/Light/: AbstractLight.hpp  DirectLight.hpp  PointLight.hpp
Engine/EntropyEngine/Include/Material/: Material.hpp  MaterialManager.hpp
Engine/EntropyEngine/Include/Parser/: FbxParser.hpp  ObjParser.hpp  TextureParser.hpp
Engine/EntropyEngine/Include/Renderer/: RHITexture.hpp  RHITexture2D.hpp  Renderer.hpp  RendererFactory.hpp
Engine/EntropyEngine/Include/Resource/: Mesh.hpp  Texture.hpp
Engine/EntropyEngine/Include/Texture/: Texture.hpp  TextureManager.hpp
Engine/EntropyEngine/Include/Utils/: Debug.hpp  ThreadPool.hpp  Utils.hpp
Engine/EntropyEngine/Src/Common/: Allocator.cpp  Renderer.cpp  RendererFactory.cpp  Scene.cpp
Engine/EntropyEngine/Src/Core/: EntropyCore.cpp
Engine/EntropyEngine/Src/Light/: PointLight.cpp
Engine/EntropyEngine/Src/Material/: Material.cpp
Engine/Include/: Camera.h  Camera.hpp  EntropyCore.h  EntropyCore.hpp  RendererFactory.h  RendererFactory.hpp  Scene.hpp
Engine/Include/Common/: Camera.hpp  Component.hpp  EntropyCore.hpp  MemoryManager.hpp  Renderer.hpp  RendererFactory.hpp  Scene.hpp  SceneNode.hpp  SceneObject.hpp  Transform.hpp
Engine/Include/Framework/Common/: Renderer.hpp  (+7 more)
Engine/Include/Geometry/: Sphere.hpp
Engine/Include/Graphic/: Image.hpp  Material.hpp  Mesh.hpp  StaticMeshComponent.hpp  Texture.hpp  Vertex.hpp
Engine/Include/Interface/: IRuntimeModule.hpp
Engine/Include/Light/: AbstractLight.hpp
Engine/Include/Parser/: BMP.hpp  FbxParser.hpp  ImageParser.hpp  ObjParser.hpp
Engine/Include/Utils/: Debug.hpp  Utils.hpp
Engine/Private/: EntropyCore.cpp  Renderer.cpp  RendererFactory.h  Scene.cpp
Engine/Public/: EntropyCore.h
Engine/Renderer/BgfxRenderer/: CMakeLists.txt
Engine/Renderer/Direct3DRenderer/: CMakeLists.txt
Engine/Renderer/GLRenderer/: CMakeLists.txt
Engine/Renderer/RayTracingRenderer/: CMakeLists.txt
Engine/Shader/: fragment.bat  fs_equirectangular.sc  fs_irradiance_convolution.sc  fs_lighting.sc  fs_pbr.sc  fs_test.sc  light.sc  vs_common.sc  vs_cubemap.sc  vs_skybox.sc  vs_test.sc
Engine/Shader/glsl/: equirectangular_to_cubemap.fs  prefilter.fs
Engine/Src/: Camera.cpp  EntropyCore.cpp  Renderer.cpp  RendererFactory.cpp  Scene.cpp
Engine/Src/Common/: Camera.cpp  Component.cpp  EntropyCore.cpp  MemoryManager.cpp  Renderer.cpp  RendererFactory.cpp  Scene.cpp  SceneNode.cpp
Engine/Src/Empty/: EmptyApplication.cpp
Engine/Src/Graphic/: Material.cpp  StaticMeshComponent.cpp
Engine/Src/Utils/: Debug.cpp  Utils.cpp
Engine/Tools/IblPrecompute/: CMakeLists.txt
GLRenderer/: CMakeLists.txt  GLRenderer.vcxproj  GLRenderer.vcxproj.filters
GLRenderer/Include/: GLRenderer.hpp
GLRenderer/Private/: GLRenderer.cpp
GLRenderer/Public/: GLRenderer.h  glrenderer_global.h
GLRenderer/Src/: GLRenderer.cpp
GameLauncher/: CMakeLists.txt
GameLauncher/Include/: EntropyApp.hpp
GameLauncher/Src/: main.cpp
IblPrecompute/: CMakeLists.txt
IblPrecompute/Include/: shader.h
IblPrecompute/Src/: main.cpp
RayTracingRenderer/: CMakeLists.txt
RayTracingRenderer/Include/: Bvh.hpp  PerlinNoise.hpp  RTCamera.hpp  RTMaterial.hpp  RTTexture.hpp  Ray.hpp  RayTracingRenderer.hpp  Tile.hpp  Utils.hpp
RayTracingRenderer/Src/: RayTracingRenderer.cpp
bgfx/: CMakeLists.txt
bimg/: CMakeLists.txt
bx/: CMakeLists.txt
glew/: CMakeLists.txt
test/: CMakeLists.txt
test/GameLauncher/: CMakeLists.txt
test/GameLauncher/Include/: EntropyApp.hpp
test/Shader/: fragment.bat  fs_equirectangular.sc  fs_irradiance_convolution.sc  fs_lighting.sc  fs_pbr.sc  fs_skybox_hdr.sc  light.sc  varying.def.sc  vertex.bat  vs_common.sc  vs_cubemap.sc  vs_skybox.sc
test/Src/: main.cpp
test/test/: CMakeLists.txt
test/testScene/: CMakeLists.txt
test/testScene/Src/: GenerateScene01.cpp  GenerateScene02.cpp  GenerateScene03.cpp
testScene/: CMakeLists.txt
testScene/Include/: GenerateScene.hpp
testScene/Src/: GenerateScene01.cpp  GenerateScene02.cpp  GenerateScene03.cpp
(+47 files in other folders)
